Index. Fix: image scale2, slider arrows visibility (only desktop)

--- a/dev/static/stylus/pages/index.styl
+++ b/dev/static/stylus/pages/index.styl
@@ -29,28 +29,35 @@
         justify-content: center
 
       &-top-prev
-        display: block
-        order: -1
-        position: relative
-        top: -3px
-        width: 6px
-        height: 10px
-        padding: 9px 12px
-        background-image: url('../img/svg/slider-prev.svg')
-        background-position: center center
-        background-repeat: no-repeat
-        cursor: pointer
+        display: none
+
+        @media $desktop
+          display: block
+          order: -1
+          position: relative
+          top: -3px
+          width: 6px
+          height: 10px
+          padding: 9px 12px
+          background-image: url('../img/svg/slider-prev.svg')
+          background-position: center center
+          background-repeat: no-repeat
+          cursor: pointer
 
       &-top-next
-        position: relative
-        top: -3px
-        width: 6px
-        height: 10px
-        padding: 9px 12px
-        background-image: url('../img/svg/slider-next.svg')
-        background-position: center center
-        background-repeat: no-repeat
-        cursor: pointer
+        display: none
+
+        @media $desktop
+          display: block
+          position: relative
+          top: -3px
+          width: 6px
+          height: 10px
+          padding: 9px 12px
+          background-image: url('../img/svg/slider-next.svg')
+          background-position: center center
+          background-repeat: no-repeat
+          cursor: pointer
 
     .article-slider
       position: relative
